--- a/strict-csp/package.json
+++ b/strict-csp/package.json
@@ -8,7 +8,8 @@
     "build": "rimraf build && tsc",
     "auto-csp": "npm run build && node build/index.js",
     "lint": "eslint . --ext .ts",
-    "tsc": "tsc"
+    "tsc": "tsc",
+    "test": "tsc --noEmit && jest"
   },
   "keywords": [
     "csp",
@@ -31,11 +32,14 @@
     "cheerio": "^1.0.0-rc.5"
   },
   "devDependencies": {
+    "@types/jest": "^30.0.0",
     "@types/node": "^14.14.14",
     "@typescript-eslint/eslint-plugin": "^4.10.0",
     "@typescript-eslint/parser": "^4.10.0",
     "eslint": "^7.15.0",
+    "jest": "^30.1.3",
     "rimraf": "^3.0.2",
+    "ts-jest": "^29.4.1",
     "typescript": "^4.1.3"
   }
 }
