--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,10 +20,18 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
 
-    - name: Install dependencies for strict-csp
-      run: npm install
-      working-directory: ./strict-csp
+    - name: Set up development environment
+      run: sh ./dev-setup.sh
 
     - name: Run tests for strict-csp
       run: npm test
       working-directory: ./strict-csp
+
+    - name: Run integration tests for webpack-plugin
+      run: npm test
+      working-directory: ./strict-csp-html-webpack-plugin
+
+    - name: Tear down development environment
+      # Always run this step, even if tests fail
+      if: always()
+      run: bash ./undo-dev-setup.sh
